--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,10 +31,27 @@ section#telefone{
     background-image: url('../imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow:  2px 2px 5px rgba(0, 0, 0, 0.336);
+}
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.432);
+    box-sizing: border-box;
+    width: 53px;
+    transform: translate(-10px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.616);
+    transition: transform 0.8s, border 0.8s;
+}
 iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 268px;
+    width: 267px;
     height: 471px;
 }
